[gd_scene load_steps=10 format=3 uid="uid://dwienwoauth53"]

[ext_resource type="FontFile" uid="uid://30gcpdg812ot" path="res://Fonts/TeenyTinyPixls-o2zo.ttf" id="1_30u33"]
[ext_resource type="Script" path="res://Scripts/Main_Menu.gd" id="1_s7whj"]
[ext_resource type="Texture2D" uid="uid://ckciab7vt6phd" path="res://Sprites/Placeholders/Sky.png" id="3_xkcj5"]
[ext_resource type="Texture2D" uid="uid://cren81or5m5s5" path="res://Sprites/Background/Background 256x64.png" id="4_iy5tb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yx8lc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e72pq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_38r04"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0l0s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gwgfx"]

[node name="StartScene" type="Node2D"]

[node name="Main_Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
focus_mode = 2
script = ExtResource("1_s7whj")

[node name="Github" type="Button" parent="Main_Menu"]
layout_mode = 0
offset_left = 15.0
offset_top = 37.0
offset_right = 47.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.976471, 0.831373, 1)
theme_override_colors/font_hover_color = Color(0.999997, 0.999813, 0.641265, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_30u33")
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = SubResource("StyleBoxEmpty_yx8lc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e72pq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_38r04")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o0l0s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gwgfx")
text = "GITHUB"

[node name="Play" type="Button" parent="Main_Menu"]
layout_mode = 0
offset_left = 13.0
offset_top = 20.0
offset_right = 49.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.976471, 0.831373, 1)
theme_override_colors/font_hover_color = Color(0.999997, 0.999813, 0.641265, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_30u33")
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = SubResource("StyleBoxEmpty_yx8lc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e72pq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_38r04")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o0l0s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gwgfx")
text = "PLAY"

[node name="Timer" type="Timer" parent="Main_Menu"]
one_shot = true

[node name="Sky" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("3_xkcj5")
centered = false

[node name="256x64" type="Sprite2D" parent="."]
position = Vector2(0, 64)
texture = ExtResource("4_iy5tb")
centered = false

[connection signal="button_down" from="Main_Menu/Github" to="Main_Menu" method="_on_github_button_down"]
[connection signal="button_down" from="Main_Menu/Play" to="Main_Menu" method="_on_play_button_down"]
[connection signal="timeout" from="Main_Menu/Timer" to="Main_Menu" method="_on_timer_timeout"]
